# dns-shield

./: .env.example  .gitattributes  .gitignore  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt
config/: prometheus.yml
config/grafana/dashboards/: dns-shield-overview.json
config/prometheus/: alert_rules.yml
data/: tif_domains.csv
data/test/: blacklist.txt  test_domains.csv  whitelist.txt
models/: scaler.joblib  training_metrics.json
models/gru/: gru_model.h5
models/lstm/: lstm_model.h5
models/rf/: rf_model.pkl  rf_model_tuned.pkl
scripts/: check_config.ps1  cleanup.ps1  generate_data.py  import_dashboard.py  init_db.sql  simulate_traffic.py  start_services.ps1  train_ensemble.ipynb  train_ensemble.py
src/: api_gateway.py  bert_service.py  dga_detector.py  ensemble_ml.py
src/utils/: config.py  db.py  logger.py  metrics.py  redis_client.py
tests/: test_bert_service.py  test_dga_detector.py  test_ensemble.py  test_integration.py
